cmake_minimum_required(VERSION 3.14)
project(datos2_tarea_extraclase_1_server)

set(CMAKE_CXX_STANDARD 14)

add_executable(datos2_tarea_extraclase_1_server main.cpp linkedlist/LinkedList.cpp linkedlist/LinkedList.h linkedlist/Node.cpp linkedlist/Node.h binarysearchtree/BinarySearchTree.cpp binarysearchtree/BinarySearchTree.h binarysearchtree/Node.cpp binarysearchtree/Node.h)